syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AutoProxy.Server.Docker";

package docker;

// The greeting service definition.
service DockerService {
  // Sends a greeting
  rpc GetPorts (GetPortsRequest) returns (GetPortsReply);
  rpc GetDomains (GetDomainsRequest) returns (GetDomainsReply);
}

message GetPortsRequest {}

message GetPortsReply {
  repeated DockerPort ports = 1;
  google.protobuf.Timestamp timestamp = 5;


}

message GetDomainsRequest {}

message GetDomainsReply {
  repeated Domain domains = 1;

  message Domain {
    string domainName = 1;
    string apiKey = 2;
  }

}

message DockerPort {
  TypeType type = 1;
  int32 destPort = 2;
  ActionType action = 3;
  bool enable = 4;
  ProtocolType protocol = 5;

  enum ActionType {
    ACCEPT = 0;
    DROP = 1;
  }

  enum TypeType {
    IN = 0;
    OUT = 2;
  }

  enum ProtocolType {
    TCP = 0;
    UDP = 1;
  }
}
