syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AutoProxy.Server.Proxmox";

package proxmox;

// The greeting service definition.
service ProxmoxService {
  // Sends a greeting
  rpc GetPorts (GetPortsRequest) returns (GetPortsReply);
  rpc OpenPort (OpenPortRequest) returns (OpenPortReply);
  rpc ClosePort (ClosePortRequest) returns (ClosePortReply);
}

message GetPortsRequest {
  string group = 1;
}

message GetPortsReply {
  repeated Port ports = 1;
  google.protobuf.Timestamp timestamp = 3;


  message Port {
    TypeType type = 1;
    int32 destPort = 2;
    ActionType action = 3;
    bool enable = 4;
    int32 postion = 5;
    ProtocolType protocol = 6;

    enum ActionType {
      ACCEPT = 0;
      DROP = 1;
    }

    enum TypeType {
      IN = 0;
      OUT = 2;
    }

    enum ProtocolType {
      TCP = 0;
      UDP = 1;
    }
  }
}

message OpenPortRequest {
  Port port = 1;
  string group = 2;

  message Port {
    TypeType type = 1;
    int32 destPort = 2;
    ActionType action = 3;
    bool enable = 4;
    ProtocolType protocol = 5;

    enum ActionType {
      ACCEPT = 0;
      DROP = 1;
    }

    enum TypeType {
      IN = 0;
      OUT = 2;
    }

    enum ProtocolType {
      TCP = 0;
      UDP = 1;
    }
  }
}

message OpenPortReply {
  bool success = 1;
}

message ClosePortRequest {
  int32 position = 1;
  string group = 2;
  
}

message ClosePortReply {
  bool success = 1;
}

